<resources>
    <string name="app_name">Leafy</string>
    <string name="welcome_to_leafy">Welcome to Leafy</string>
    <string name="login">LOGIN</string>
    <string name="continue_without_login">CONTINUE WITHOUT LOGIN</string>
    // Sign up bold and underlined
    <string name="new_user_signup">Not have Account? <b> <u>Sign Up</u> </b> </string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="welcome">Welcome</string>
    <string name="create_account">Create \nAccount</string>
    <string name="name_hint">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">SIGN UP</string>
    <string name="dashboard_user">Dashboard User</string>
    <string name="lorem_ipsum_com">lorem@ipsum.com</string>
    <string name="dashboard_admin">Dashboard Admin</string>
    <string name="add_category">+ Add Category</string>
    <string name="submit">SUBMIT</string>
    <string name="add_a_new_category">Add a New Category</string>
    <string name="category_title">Category Title</string>
    <string name="search">Search</string>
    <string name="add_a_new_book">Add a New Book</string>
    <string name="book_description">Book Description</string>
    <string name="book_title">Book Title</string>
    <string name="book_category">Book Category</string>
    <string name="upload">Upload</string>
    <string name="profile">Profile</string>
    <string name="full_name">Full Name</string>
    <string name="account">Account</string>
    <string name="n_a">N/A</string>
    <string name="member">Member</string>
    <string name="favorite_books">Favorite Books</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="name">Name</string>
    <string name="update">Update</string>
    <string name="forgot_npassword">Forgot\nPassword</string>
    <string name="forgot_info">Enter your email address\n to reset your password</string>
    <string name="books">Books</string>
    <string name="category">Category</string>
    <string name="the_book_title">The Book Title</string>
    <string name="description_of_the_book">Description of the Book</string>
    <string name="_15_mb">15 MB</string>
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>

</resources>