<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="140dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="5dp"
    app:cardCornerRadius="5dp"
    app:cardElevation="0dp"
    app:contentPadding="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/pdfRl"
            android:layout_width="100dp"
            android:layout_height="140dp"
            android:layout_marginEnd="5dp"
            android:background="@color/midGrey">

            <!-- Pdf View -->

            <!-- Progress Bar -->
            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </RelativeLayout>

        <!-- Title -->
        <TextView
            android:id="@+id/titleTv"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/pdfRl"
            android:layout_toStartOf="@id/moreButton"
            android:maxLines="1"
            android:text="@string/the_book_title"
            android:ellipsize="end"/>

        <!-- Description -->
        <TextView
            android:id="@+id/descriptionTv"
            style="@style/TextAppearance.MaterialComponents.Body2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/titleTv"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:layout_toEndOf="@id/pdfRl"
            android:maxLines="4"
            android:text="@string/description_of_the_book"/>

        <!-- Category -->
        <TextView
            android:id="@+id/categoryTv"
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:maxLines="1"
            android:text="@string/category"/>

        <!-- Size -->
        <TextView
            android:id="@+id/sizeTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toEndOf="@id/pdfRl"
            android:maxLines="1"
            android:text="@string/_15_mb"/>

        <!-- Date -->
        <TextView
            android:id="@+id/dateTv"
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toStartOf="@id/categoryTv"
            android:layout_toEndOf="@id/sizeTv"
            android:maxLines="1"
            android:text="@string/dd_mm_yyyy"
            android:textAlignment="center"/>

        <!-- Show more options -->
        <ImageButton
            android:id="@+id/moreButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_more_black"
            android:padding="5dp"
            android:background="@android:color/transparent"/>







    </RelativeLayout>

</androidx.cardview.widget.CardView>