<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back01"
    tools:context=".ProfileActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="185dp"
        android:background="@drawable/profilebg"
        android:layout_marginTop="40dp" />

    <!-- Toolbar -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@drawable/shape_toolbar_01">

        <!-- Back Button -->
        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back_white"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:layout_marginStart="10dp"/>


        <!-- Title -->
        <TextView
            android:id="@+id/toolbarTitleTv"
            android:text="@string/profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_centerInParent="true"
            android:textStyle="bold"/>



        <!-- Profile Edit Button -->
        <ImageButton
            android:id="@+id/profileEditButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_edit_white"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:layout_marginEnd="10dp"/>


    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="180dp"
        android:background="@drawable/shape_rect01" />

    <!-- Shapeable ImageView with Rounded Corners -->
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/profileIv"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="120dp"
        android:src="@drawable/ic_person_gray"
        android:layout_centerHorizontal="true"
        android:scaleType="centerCrop"
        android:background="@color/white"
        app:shapeAppearanceOverlay="@style/styleRoundedCornersImage"/>

    <!-- Name -->
    <TextView
        android:id="@+id/nameTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/full_name"
        android:textColor="@color/black"
        android:layout_below="@+id/profileIv"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <!-- Email -->
    <TextView
        android:id="@+id/emailTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lorem_ipsum_com"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:layout_below="@+id/nameTv"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"/>
    
    <LinearLayout
        android:id="@+id/detailsLl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/emailTv"
        android:layout_marginTop="8dp">

        <!-- Account -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/accountTypeTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/n_a"
                android:textColor="@color/black"/>

        </LinearLayout>

        <!-- Member Since -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/member"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/memberDateTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/n_a"
                android:textColor="@color/black"/>

        </LinearLayout>

        <!-- Favorite Books -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/favorite_books"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/favoriteBookCountTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/n_a"
                android:textColor="@color/black"/>

        </LinearLayout>


    </LinearLayout>


</RelativeLayout>