<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back01"
    tools:context=".PdfListAdminActivity">

    <!-- Toolbar -->
    <RelativeLayout
        android:id="@+id/toolbarRl"
        android:background="@drawable/shape_toolbar_01"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize">

        <!-- Back Button -->
        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back_white"
            android:background="@android:color/transparent"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:padding="5dp"/>

        <!-- Title -->
        <TextView
            android:id="@+id/titleTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/books"
            android:textColor="@color/white"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:textStyle="bold"/>

        <!-- Subtitle -->
        <TextView
            android:id="@+id/subTitleTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:textColor="@color/white"
            android:layout_below="@+id/titleTv"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>

    <!-- Search -->
    <EditText
        android:id="@+id/searchEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbarRl"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/white"
        android:drawableStart="@drawable/ic_search_gray"
        android:drawablePadding="10dp"
        android:padding="10dp"
        android:hint="@string/search"
        android:textColorHint="@color/midGrey"
        android:textColor="@color/black"/>

    <!-- PDF/Book List -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/booksRv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/searchEt"
        android:layout_margin="10dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/row_pdf_admin"/>



</RelativeLayout>