<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back01"
    tools:context=".CategoryAddActivity">

    <!-- Toolbar -->
    <RelativeLayout
        android:id="@+id/toolbarRl"
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:background="@drawable/shape_toolbar_01">


        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@android:color/transparent"
            android:padding="5dp"
            android:src="@drawable/ic_back_white" />


        <ImageView
            android:id="@+id/iconImageView"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/backButton"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/iconImageView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="3dp"
            android:fontFamily="sans-serif"
            android:text="@string/add_a_new_category"
            android:textColor="@android:color/white"
            android:textSize="20sp"/>



    </RelativeLayout>

        <!-- Input Category -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/categoryTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="230dp"
            app:hintEnabled="false" >


            <EditText
                android:id="@+id/categoryEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_edittext_01"
                android:drawableStart="@drawable/ic_category_gray"
                android:drawablePadding="10dp"
                android:hint="@string/category_title"
                android:inputType="textPersonName|textCapSentences"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/midGrey" />



        </com.google.android.material.textfield.TextInputLayout>

        <!-- Add Category Button -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/submitButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/categoryTextInputLayout"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/submit_button_shape"
            android:text="@string/submit"
            android:textColor="@android:color/white" />



</RelativeLayout>