<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back01"
    tools:context=".ProfileEditActivity">

    <!-- Toolbar -->
    <RelativeLayout
        android:id="@+id/toolbarRl"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/shape_toolbar_01">

        <!-- Back Button -->
        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_back_white" />

        <!-- Title -->
        <TextView
            android:id="@+id/toolbarTitleTv"
            android:text="@string/edit_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textColor="@color/white"
            android:layout_centerHorizontal="true"
            android:textStyle="bold"/>

        <!-- ShapeableImageView: Profile Image -->
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/profileIv"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_below="@id/toolbarTitleTv"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:src="@drawable/ic_person_gray"
            android:background="@color/white"
            app:shapeAppearanceOverlay="@style/styleRoundedCornersImage"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="225dp">

        <!-- EditText: Input Name -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameTil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="false">

            <EditText
                android:id="@+id/nameEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_edittext_01"
                android:drawableStart="@drawable/ic_person_gray"
                android:drawablePadding="10dp"
                android:inputType="textPersonName|textCapWords"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                android:hint="@string/name"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Button: Update Profile -->
        <Button
            android:id="@+id/updateButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/nameTil"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_shape_01"
            android:text="@string/update"
            android:textColor="@color/white"/>

    </RelativeLayout>

</RelativeLayout>